[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/fonts/montserrat_eb_128.tres" type="DynamicFont" id=1]
[ext_resource path="res://interface/fonts/montserrat_eb_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/UsersScene.gd" type="Script" id=3]

[node name="Users" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.002
margin_left = 23.0
margin_top = 23.0
margin_bottom = -0.280029
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column" type="VBoxContainer" parent="."]
anchor_right = 0.372
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -22.0
margin_right = 663.796
margin_bottom = 308.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Column"]
margin_right = 934.0
margin_bottom = 157.0
custom_fonts/font = ExtResource( 1 )
text = "Users"
align = 1

[node name="Form" type="HBoxContainer" parent="Column"]
margin_top = 182.0
margin_right = 934.0
margin_bottom = 240.0
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Column/Form"]
margin_top = 5.0
margin_right = 211.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 2 )
text = "Username"

[node name="LineEdit" type="LineEdit" parent="Column/Form"]
margin_left = 236.0
margin_right = 736.0
margin_bottom = 58.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 2 )

[node name="FormButton" type="Button" parent="Column/Form"]
margin_left = 761.0
margin_right = 934.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "SUBMIT"

[node name="Headers" type="HBoxContainer" parent="Column"]
margin_top = 265.0
margin_right = 934.0
margin_bottom = 313.0

[node name="Username" type="Label" parent="Column/Headers"]
margin_right = 465.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Player"
align = 1
uppercase = true

[node name="Stage" type="Label" parent="Column/Headers"]
margin_left = 469.0
margin_right = 934.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Stage"
align = 1
uppercase = true

[node name="HeadersAdded" type="HBoxContainer" parent="Column"]
margin_top = 338.0
margin_right = 934.0
margin_bottom = 386.0

[node name="PlayerAdded" type="Label" parent="Column/HeadersAdded"]
margin_right = 465.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Player"
align = 1
uppercase = true

[node name="StageAdded" type="Label" parent="Column/HeadersAdded"]
margin_left = 469.0
margin_right = 934.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Stage"
align = 1
uppercase = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Column/Form/FormButton" to="." method="_on_FormButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
